snapshots/syntax/library/functions/financial/pv/pv_elseif.snap
---
source: src/syntax/library/functions/financial/pv.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: IfStatement
      children:
        - kind: IfKeyword
          text: If
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: amount
            - kind: Whitespace
              text: " "
            - kind: GreaterThanOperator
              text: ">"
            - kind: Whitespace
              text: " "
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "1000000"
        - kind: Whitespace
          text: " "
        - kind: ThenKeyword
          text: Then
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: rate
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: SingleLiteral
                      text: "0.04"
                - kind: Newline
                  text: "\n"
        - kind: ElseIfClause
          children:
            - kind: ElseIfKeyword
              text: ElseIf
            - kind: Whitespace
              text: " "
            - kind: BinaryExpression
              children:
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: PV
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: BinaryExpression
                              children:
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: SingleLiteral
                                      text: "0.05"
                                - kind: Whitespace
                                  text: " "
                                - kind: DivisionOperator
                                  text: /
                                - kind: Whitespace
                                  text: " "
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "12"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "360"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: UnaryExpression
                              children:
                                - kind: SubtractionOperator
                                  text: "-"
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: payment
                    - kind: RightParenthesis
                      text: )
                - kind: Whitespace
                  text: " "
                - kind: GreaterThanOperator
                  text: ">"
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: budget
            - kind: Whitespace
              text: " "
            - kind: ThenKeyword
              text: Then
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: Whitespace
                  text: "    "
                - kind: AssignmentStatement
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: rate
                    - kind: Whitespace
                      text: " "
                    - kind: EqualityOperator
                      text: "="
                    - kind: Whitespace
                      text: " "
                    - kind: NumericLiteralExpression
                      children:
                        - kind: SingleLiteral
                          text: "0.05"
                    - kind: Newline
                      text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: IfKeyword
          text: If
        - kind: Newline
          text: "\n"
